tests/integration/fail/records/cannot_use_dynamic_fields_recursively.ncl
# test.type = 'error'
#
# [test.metadata]
# error = 'TypecheckError::UnboundIdentifier'
#
# [test.metadata.expectation]
# identifier = 'foo'
let x = "foo" 
in { "%{x}" = 1, bar = foo }.bar
